- monster_death ported.

30/12/2001 (Jir)
- new RBM/RBEs implemented.
- fixed a bug that allowed ego-torches to burn forever.
- some special attacking effect (like Chaos/Vorpal/Vampiric) implemented.
  (but they don't work in pvp yet!)
- Items with high bonus get *higher* prices.
- Config options (cfg_blabla) are bundled in one structure (cfg.blabla).
- New config option SPELL_STACK_LIMIT.
- Wraith-Form is harder to stack(just like Haste-Self).
- Reflection. Some traps.

31/12/2001 (Jir)
- Boomerang/Axe/MageStaff randarts.
- New monster spells are implemented(flags4-6).
- (Slightly) easy-to-read unique list.

1/1/2001 (Jir)
- A happy new year.
- Merged the changes/files necessary to compile in win32(by Yakina).
- LUA error messages are displayed only to DM/wizard.
- bandled CAUSE_1~4 into CURSE, ARROW_1~4 into ARROW_1~2.
- Insanity/Eldritch-horror(partially) implemented.
- Original monsters/mego/items/egos/artifacts.
- Drain life/mana

2/1/2001 (Yakina [note by Jir])
- some fixes on win32-client.
- bugfixes, and extern.h cleanup.
- win32-server runs *confortably* now.

2/1/2001 (Jir)
- 'cleverer' monster spells. (set STUPID_MONSTERS if it's too slow)
- monster category filter (eg. to eliminate Joke-monsters).
- better store-price calculator (rebalancement needed).
- dying hellish could cause unfindable arts.

3/1/2001 (Jir)
- new(?) traps: pit, chasm
- Shopkeepers always benefit from transaction(STORE_BENEFIT).
- Store can merge items in a reasonable way.
- LIFE/MANA item flags implemented.
- Fixed a bug that allowed multiple artifacts(like Galadriel).
- chatline command: /ex(tra), /ref(resh)
- slain a lot of warnings.
- "Kings' etiquette" is coded in. (optional)

4/1/2001 (Jir)
- monster-move code ameliorated (!STUPID_MONSTERS)
- some monsters will prefer to keep distance (even STUPID_MONSTER is on).
- new monsters with DISBELIEVE power (eg. Unbeliever).
- yaac(Yet Another Anti-Cheeze): lowbies' arrows won't drop on floor.
